css/style.css
/*

* Based on Cover by https://twitter.com/mdo"  @mdo
* added cover image and background color to match (green)
*
* Globals

*/

/* Links */
a,
a:focus,
a:hover {
  color: #fff;
}

/*fonts*/

@font-face{
  font-family: 'Gotham-Black';
  src:url(../assets/fonts/Gotham/Gotham-Black.ttf);
}
@font-face{
  font-family: 'Gotham-Book';
  src:url(../assets/fonts/Gotham/Gotham-Book.ttf);
}

@font-face{
  font-family: 'Acre-Semibold';
  src:url(../assets/fonts/Acre/Acre-Semibold.ttf);
}
@font-face{
  font-family: 'Acre-Regular';
  src:url(../assets/fonts/Acre/Acre-Regular.ttf);
}
@font-face{
  font-family: 'Acre-Light';
  src:url(../assets/fonts/Acre/Acre-Light.ttf);
}
@font-face{
  font-family: 'Asimov-Regular';
  src:url(../assets/fonts/Asimov/Asimov.otf);
}
@font-face{
  font-family: 'Asimov-Dist';
  src:url(../assets/fonts/Asimov/AsimovDist.otf);
}


.nav-link,
.nav-link:hover,
.nav-link:focus {
  background: transparent !important;
  color:white !important;
  font-family:'Acre-Light';
  border: 0px !important;
/*  border-bottom: 1px;*/
  font-size: 20px;

}


/* Custom default button */
.btn-default,
.btn-default:hover,
.btn-default:active {
  color: #fff !important; 
  text-shadow: none; /* Prevent inheritence from `body` */
  background-color: #fff;
  border: 0px solid #fff;
}

.spons{
  display:inline-block;
  margin:50px;
  text-align: center;
}
.spon{
  height:100px;
  margin-left:30px;
  margin-right:30px;
  margin-top:20px;
}
#sponsors a{
  justify-content: center;
}

.strong {
  font-family: "Acre-Semibold";
}
/*
 * Base structure
 */

html,
body {
/*css for full size background image*/
  /*background: url(somethingsomething) no-repeat center center fixed; */
/*  background-color:black;*/
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  
  height: 100%;
  color: white;
  text-align: center;

  max-width: 100%;
  overflow-x: hidden;
}



/* Padding for spacing */
.inner {
  padding: 30px;
  padding-left: 0px;
  padding-right: 0px;
/*  display: inline-block;*/
}


/*Wrapper for tab content*/
.wrapper {
  display:table !important;
  width:100%;
  text-align:center;
  color:white;
  font-family: 'Acre-Light' !important;
}

/*Mission statement image*/)
.box {
  display:table-cell !important;
  color:white !important;
  
}

.faq {
  padding: 15%;
}
.pre-reg {
  position: relative;
  text-align: center;
}

.pre-reg-text {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}
/*Side bar for images*/
.sidebar {
  width:35% !important;
}

.headshots {
  padding:30px;
}

.description {
  margin-top:50px;
  font-size: 20px;
}

.headshot_pics {
  border-radius: 50%;
  max-width: 50%;
  box-shadow: 10px 20px #FABC3C;

}

.t_pics {
  border-radius: 50%;
  box-shadow: 10px 20px #111450;

}

.button:hover {
  text-decoration: underline;
  text-decoration-color: white;
}

.question {
  margin-top: 2.6vw;
  padding-left: 200px;
  padding-right: 200px;
  text-align: left;
  font-size: 1.3vw;
  color:#CE6767;
}

.answer {
  margin-top: 2.3px;
  padding-left:200px;
  padding-right:200px;
  text-align: right;
  font-size: 1.2vw;
  color: white;
}

#shehacks_landing {
  background-image: url("../assets/images/shehacks_cover.jpg");
  background-size:100% 100%;
}

#shehacks_f {
  background-image: url("../assets/images/stripe2.png");
  background-size:100% 100%;
}

#shehacks_f_main {
  background-color: #011450;
  border-radius: 50%;
}
/*
 * Header
 */

.masthead-brand {
  margin-top: 0px;
  margin-bottom: 0px;
  margin-left: 40px;
  padding-top: 30px;
}

.masthead-nav > li {

  display: inline-block;
}
.masthead-nav > li + li {
  margin-left: 20px;
}
.masthead-nav > li > a {

  padding-right: 2px;
  padding-left: 2px;

  margin-right: 2px !important;
  margin-left: 2px !important;

  font-weight: bold;
  color: #fff; /* IE8 proofing */
  color: rgba(255,255,255,.95);

}
.masthead-nav > li > a:hover,
.masthead-nav > li > a:focus {
/*  background-color: transparent;*/
  border-bottom: 2px !important;
  border-bottom-color: white !important;
  /*border-bottom-color: rgba(255,255,255,.25);*/
}
.masthead-nav > .active > a,
.masthead-nav > .active > a:hover,
.masthead-nav > .active > a:focus {
  color: #fff;
  border-bottom-color: #fff !important;
}

@media (min-width: 768px) {
  .masthead-brand {
    float: left;
  }
  .masthead-nav {
    float: right;
  }
}


/*
 * Cover
 */

.cover {
  padding: 0 20px;
}
.cover .btn-lg {
  padding: 10px 20px;
  font-weight: bold;
}


/*
 * Footer
 */

.mastfoot {
  color: black; /* IE8 proofing */

}


/*
 * Affix and center
 */

@media (max-width: 767px) {
  .sidebar {
    width : 100px !important ;
  }
}



@media (min-width: 768px) {
  /* Pull out the header and footer */
/*  .masthead {
    position: fixed;
    top: 0;
  }
  .mastfoot {
    position: fixed;
    bottom: 0;
  }
*/
  /* Handle the widths */
  .masthead,
  .mastfoot,
  .cover-container {
    width: 100%; /* Must be percentage or pixels for horizontal alignment */
  }
}

/*@media (min-width: 992px) {
  .masthead,
  .mastfoot,
  .cover-container {
    width: 700px;
  }
}*/

